Add comprehensive tests for order history feature
- Created unit tests for basic, paginated, and filtered order history endpoints
- Added tests for the order statistics functionality
- Implemented integration tests to verify endpoint security and behavior
- Ensured proper test coverage for different user roles and access scenarios

These tests validate that customers can access only their own order data,
while admins can access any user's orders. The tests also verify that the
filtering, pagination, and statistics features work as expected.